# GIS_AGENT

./: .env  pyproject.toml  requirements.txt
src/gis_agent/: __init__.py  chainlit.md  chat_history.json  config.py  main.py
src/gis_agent/.chainlit/: config.toml
src/gis_agent/.files/46f978a2-94fc-400b-b50a-8835000dec0c/: e83950ed-6de5-4766-950f-330c407ef338.txt
src/gis_agent/Agents/: farmbot_agent.py
src/gis_agent/public/: theme.json
src/gis_agent/services/: analysis.py  government.py  weather.py
src/gis_agent/utils/: helpers.py
